# EiCP

./: .gitignore  CMakeLists.txt  LICENSE  README.md  flake.nix
cloth_generator/: create_mesh.py
dependencies/glad/: glad.h
src/: algebraic_types.cpp  algebraic_types.h  camera.cpp  camera.h  cloth_mesh.cpp  cloth_mesh.h  config.h  glad.c  linear_algebra.cpp  linear_algebra.h  main.cpp  obj_reader.cpp  obj_reader.h  obj_reader.hpp  physics_engine.cpp  physics_engine.h  primitives.h  shader.cpp  shader.h  spatial_hash_structure.cpp  spatial_hash_structure.h  xpbd_window.cpp  xpbd_window.h
src/shaders/: fragment.txt  vertex.txt
